--- a/CSS-My Site/index.html
+++ b/CSS-My Site/index.html
@@ -17,7 +17,12 @@
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-        
+        <div>
+            <h1>Hi, i'm Alex</h1>
+            <p>a full stack programmer.</p>
+        </div>
+        <div class="mid_container"></div>
+        <div class="bot_container"></div>
         <script src="" async defer></script>
     </body>
 </html>
